--- a/css/style.css
+++ b/css/style.css
@@ -697,17 +697,17 @@ li.facebook a {
     color: #fff;
     background: #3b5998;
 }
-li.twitter a  {
+li.instagram a  {
     color: #fff;
-    background: #1da1f2;
+    background: #e4405f;
 }
-li.google a  {
+li.viber a  {
     color: #fff;
-    background: #dd4b39;
+    background: #665CAC;
 }
-li.linkedin a  {
+li.telegram a  {
     color: #fff;
-    background: #0077b5;
+    background: #0088cc;
 }
 /*--//footer--*/
 
