--- a/css/style.css
+++ b/css/style.css
@@ -767,6 +767,10 @@ li.facebook a {
     color: #fff;
     background: #3b5998;
 }
+li.vk a {
+   color: #fff ;
+   background: #4c75a3;
+}
 li.instagram a  {
     color: #fff;
     background: #e4405f;
