--- a/css/style.css
+++ b/css/style.css
@@ -769,7 +769,7 @@ li.facebook a {
 }
 li.vk a {
    color: #fff ;
-   background: #4c75a3;
+   background: #597da3;
 }
 li.instagram a  {
     color: #fff;
