--- a/css/style.css
+++ b/css/style.css
@@ -771,6 +771,10 @@ li.vk a {
    color: #fff ;
    background: #597da3;
 }
+li.twitter a  {
+    color: #fff;
+    background: #00acee;
+}
 li.instagram a  {
     color: #fff;
     background: #e4405f;
