--- a/css/style-blog.css
+++ b/css/style-blog.css
@@ -432,6 +432,7 @@ h3.heading, h2.heading {
 h3 {
     margin: 0;
     color: #323648;
+	font-family: 'Raleway', sans-serif;
 }
 
 /*-------------------- 
