--- a/css/style-blog.css
+++ b/css/style-blog.css
@@ -417,8 +417,10 @@ nav li.booking a {
 /*-- //btn-outline --*/
 
 /*-- Заголовок --*/
+h3 {font-size: 43px;}
+h4 {font-size: 35px;}
+
 h3.heading, h4.heading {
-    font-size: 43px;
     margin: 0;
     color: #323648;
     font-weight: 500;
