--- a/css/style-blog.css
+++ b/css/style-blog.css
@@ -396,7 +396,7 @@ nav li.booking a {
 }
 @media(max-width:384px) {
 	li.booking {
-			margin-top: 10px;
+	    margin-top: 10px;
 	}
 }	
 /*-- //inner banner --*/
@@ -411,8 +411,8 @@ nav li.booking a {
     transition: 0.3s ease-in;
     border-radius: 8px;
     background-color: transparent;
-    color: var(--primary-color);
-    border: 1px solid var(--primary-color);
+    color: var(--primary);
+    border: 1px solid var(--primary);
 }
 /*-- //btn-outline --*/
 
