--- a/css/style-blog.css
+++ b/css/style-blog.css
@@ -10218,7 +10218,8 @@ p {
 a {
   color: var(--primary-color);
   text-decoration: none;
-  font-weight: bold; }
+  /*font-weight: bold;*/
+}
 
 .post-meta {
   font-size: 1rem;
