--- a/css/style-blog.css
+++ b/css/style-blog.css
@@ -7806,8 +7806,8 @@ a.text-dark:hover, a.text-dark:focus {
   *::after {
     text-shadow: none !important;
     box-shadow: none !important; }
-  a:not(.btn) {
-    text-decoration: underline; }
+  /*a:not(.btn) {
+    text-decoration: underline; }*/
   abbr[title]::after {
     content: " (" attr(title) ")"; }
   pre {
