--- a/css/style-blog.css
+++ b/css/style-blog.css
@@ -11034,8 +11034,9 @@ p.alphabet {
   font-weight: 600;
   color: var(--heading-color); }
 
-.single-post-content p a:hover {
+/*.single-post-content p a:hover {
   text-decoration: underline; }
+*/
 
 .left-right {
   grid-template-columns: auto auto;
