--- a/css/blog.css
+++ b/css/blog.css
@@ -33,3 +33,209 @@ h3.section-title-left {
     text-transform: capitalize;
     border-bottom: 1px solid #ddd;
 }
+.section-title-left::before {
+    background-color: #292922;
+    bottom: -2px;
+    content: "";
+    height: 2px;
+    left: 0;
+    position: absolute;
+    width: 80px;
+    box-sizing: border-box;
+}
+
+.w3l-homeblock1 .trending .grids5-info, .w3l-blog-slider .trending .grids5-info, .w3l-blog-block2 .trending .grids5-info, .w3l-author .trending .grids5-info {
+  display: grid;
+  grid-template-columns: 40px 1fr;
+  grid-gap: 10px;
+  border-bottom: 1px solid var(--border-light);
+  padding-bottom: 15px;
+  margin-bottom: 15px; }
+
+.w3l-homeblock1 .trending .grids5-info h4, .w3l-blog-slider .trending .grids5-info h4, .w3l-blog-block2 .trending .grids5-info h4, .w3l-author .trending .grids5-info h4 {
+  color: #999; }
+@media (max-width: 1080px) {
+  .w3l-homeblock1 .trending .grids5-info:last-child, .w3l-blog-slider .trending .grids5-info:last-child, .w3l-blog-block2 .trending .grids5-info:last-child, .w3l-author .trending .grids5-info:last-child {
+    display: none; } }
+
+@media (max-width: 736px) {
+  .w3l-homeblock1 .list-view .grids5-info, .w3l-blog-slider .list-view .grids5-info, .w3l-blog-block2 .list-view .grids5-info, .w3l-author .list-view .grids5-info {
+    display: block; }
+  .w3l-homeblock1 .trending .grids5-info:last-child, .w3l-blog-slider .trending .grids5-info:last-child, .w3l-blog-block2 .trending .grids5-info:last-child, .w3l-author .trending .grids5-info:last-child {
+    display: grid; } }
+
+@media (max-width: 415px) {
+  .w3l-homeblock1 a.blog-desc1, .w3l-blog-slider a.blog-desc1, .w3l-blog-block2 a.blog-desc1, .w3l-author a.blog-desc1 {
+    font-size: 18px; }
+  .w3l-homeblock1 .trending .grids5-info, .w3l-blog-slider .trending .grids5-info, .w3l-blog-block2 .trending .grids5-info, .w3l-author .trending .grids5-info {
+    grid-template-columns: 30px 1fr; }
+  .w3l-homeblock1 a.blog-desc-big, .w3l-blog-slider a.blog-desc-big, .w3l-blog-block2 a.blog-desc-big, .w3l-author a.blog-desc-big {
+    font-size: 24px;
+    line-height: 30px; } }
+
+.w3l-startup .most-recent .grids5-info {
+  display: grid;
+  grid-template-columns: 30% 65%;
+  grid-gap: 5%; }
+
+
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem; }
+  .card > hr {
+    margin-right: 0;
+    margin-left: 0; }
+  .card > .list-group:first-child .list-group-item:first-child {
+    border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem; }
+  .card > .list-group:last-child .list-group-item:last-child {
+    border-bottom-right-radius: 0.25rem;
+    border-bottom-left-radius: 0.25rem; }
+
+.card-body {
+  flex: 1 1 auto;
+  min-height: 1px;
+  padding: 1.25rem; }
+
+.card-title {
+  margin-bottom: 0.75rem; }
+
+.card-subtitle {
+  margin-top: -0.375rem;
+  margin-bottom: 0; }
+
+.card-text:last-child {
+  margin-bottom: 0; }
+
+.card-link:hover {
+  text-decoration: none; }
+
+.card-link + .card-link {
+  margin-left: 1.25rem; }
+
+.card-header {
+  padding: 0.75rem 1.25rem;
+  margin-bottom: 0;
+  background-color: rgba(0, 0, 0, 0.03);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125); }
+  .card-header:first-child {
+    border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0; }
+  .card-header + .list-group .list-group-item:first-child {
+    border-top: 0; }
+
+.card-footer {
+  padding: 0.75rem 1.25rem;
+  background-color: rgba(0, 0, 0, 0.03);
+  border-top: 1px solid rgba(0, 0, 0, 0.125); }
+  .card-footer:last-child {
+    border-radius: 0 0 calc(0.25rem - 1px) calc(0.25rem - 1px); }
+
+.card-header-tabs {
+  margin-right: -0.625rem;
+  margin-bottom: -0.75rem;
+  margin-left: -0.625rem;
+  border-bottom: 0; }
+
+.card-header-pills {
+  margin-right: -0.625rem;
+  margin-left: -0.625rem; }
+
+.card-img-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1.25rem; }
+
+.card-img,
+.card-img-top,
+.card-img-bottom {
+  flex-shrink: 0;
+  width: 100%; }
+
+.card-img,
+.card-img-top {
+  border-top-left-radius: calc(0.25rem - 1px);
+  border-top-right-radius: calc(0.25rem - 1px); }
+
+.card-img,
+.card-img-bottom {
+  border-bottom-right-radius: calc(0.25rem - 1px);
+  border-bottom-left-radius: calc(0.25rem - 1px); }
+
+.card-deck .card {
+  margin-bottom: 15px; }
+
+@media (min-width: 576px) {
+  .card-deck {
+    display: flex;
+    flex-flow: row wrap;
+    margin-right: -15px;
+    margin-left: -15px; }
+    .card-deck .card {
+      flex: 1 0 0%;
+      margin-right: 15px;
+      margin-bottom: 0;
+      margin-left: 15px; } }
+
+.card-group > .card {
+  margin-bottom: 15px; }
+
+@media (min-width: 576px) {
+  .card-group {
+    display: flex;
+    flex-flow: row wrap; }
+    .card-group > .card {
+      flex: 1 0 0%;
+      margin-bottom: 0; }
+      .card-group > .card + .card {
+        margin-left: 0;
+        border-left: 0; }
+      .card-group > .card:not(:last-child) {
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0; }
+        .card-group > .card:not(:last-child) .card-img-top,
+        .card-group > .card:not(:last-child) .card-header {
+          border-top-right-radius: 0; }
+        .card-group > .card:not(:last-child) .card-img-bottom,
+        .card-group > .card:not(:last-child) .card-footer {
+          border-bottom-right-radius: 0; }
+      .card-group > .card:not(:first-child) {
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0; }
+        .card-group > .card:not(:first-child) .card-img-top,
+        .card-group > .card:not(:first-child) .card-header {
+          border-top-left-radius: 0; }
+        .card-group > .card:not(:first-child) .card-img-bottom,
+        .card-group > .card:not(:first-child) .card-footer {
+          border-bottom-left-radius: 0; } }
+
+.card-columns .card {
+  margin-bottom: 0.75rem; }
+
+@media (min-width: 576px) {
+  .card-columns {
+    -webkit-column-count: 3;
+       -moz-column-count: 3;
+            column-count: 3;
+    -webkit-column-gap: 1.25rem;
+       -moz-column-gap: 1.25rem;
+            column-gap: 1.25rem;
+    orphans: 1;
+    widows: 1; }
+    .card-columns .card {
+      display: inline-block;
+      width: 100%; } }
+
+
+
+
+
