--- a/css/blog-page.css
+++ b/css/blog-page.css
@@ -136,6 +136,90 @@ h3.blog-desc-big {
   font-weight: 500;
   border-radius: 5px; }
 
+@media (max-width: 736px) {
+  h3.blog-desc-big {
+    font-size: 30px;
+    line-height: 40px; }
+  .left-right {
+    grid-template-columns: auto;
+    grid-gap: 25px; } }
+
+@media (max-width: 568px) {
+  h3.blog-desc-big {
+    font-size: 28px;
+    line-height: 36px; } }
+
+@media (max-width: 480px) {
+  .blog-post-main .blockquote {
+    font-size: 18px; }
+  .text-list ol {
+    padding-left: 20px; }
+  .buttons-singles h4 {
+    margin-right: 8px; }
+  .buttons-singles.tags a {
+    font-size: 15px;
+    margin-right: 5px; }
+  .author-card {
+    padding: 20px; }
+  .blog-post-main .media.second {
+    grid-template-columns: 1fr; }
+  .post-content iframe, .sing-post-thumb iframe {
+    height: 300px; } }
+
+@media (max-width: 415px) {
+  .post-content iframe, .sing-post-thumb iframe {
+    height: 210px; } }
+
+@media (max-width: 384px) {
+  h3.blog-desc-big {
+    font-size: 26px;
+    line-height: 32px; }
+  .blog-post-main .comments .media {
+    grid-template-columns: auto;
+    grid-gap: 20px; } }
+
+@media (max-width: 375px) {
+  h3.blog-desc-big {
+    font-size: 24px;
+    line-height: 30px; }
+  .post-content iframe, .sing-post-thumb iframe {
+    height: 190px; } }
+
+.w3l-error {
+  max-width: 950px;
+  margin: auto; }
+
+h1.error-title {
+  font-size: 80px;
+  color: var(--primary-color);
+  font-weight: 700; }
+
+@media (max-width: 736px) {
+  .w3l-error {
+    max-width: 650px;
+    text-align: center; } }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
