--- a/css/blog-page.css
+++ b/css/blog-page.css
@@ -49,7 +49,7 @@ h3.blog-desc-big {
 
 .single-post-content p a {
   font-weight: 600;
-  color: var(--heading-color); }
+  color: #292922; }
 
 .single-post-content p a:hover {
   text-decoration: underline; }
@@ -62,7 +62,7 @@ p.alphabet {
 
 span.big-letter {
     font-size: 85px;
-    color: var(--heading-color);
+    color: #292922;
     font-weight: 600;
 }
 
@@ -92,7 +92,7 @@ h3.blog-desc-big {
     font-size: 34px;
     line-height: 44px;
     font-weight: 600;
-    color: var(--heading-color);
+    color: #292922;
     margin-bottom: 20px;
     transition: .3s ease;
     -webkit-transition: .3s ease;
@@ -191,7 +191,7 @@ h3.blog-desc-big {
 
 h1.error-title {
   font-size: 80px;
-  color: var(--primary-color);
+  color: #0085ad;
   font-weight: 700; }
 
 @media (max-width: 736px) {
@@ -199,7 +199,14 @@ h1.error-title {
     max-width: 650px;
     text-align: center; } }
 
-
+.text-list ol li {
+    font-size: 18px;
+    line-height: 26px;
+    margin: 12px 0;
+    color: #292922;
+    list-style-type: decimal;
+    font-weight: 600;
+}
 
 
 
