--- a/css/blog-page.css
+++ b/css/blog-page.css
@@ -109,6 +109,7 @@ h3.blog-desc-big {
     color: #292922;
     list-style-type: decimal;
     font-weight: 600;
+    list-style-type: decimal;
 }
 
 .d-grid {
