--- a/css/style.css
+++ b/css/style.css
@@ -883,7 +883,7 @@ p.text {
     text-transform: capitalize;
 }
 
-/*Добавлено 04.08.21*/
+/*Добавлено 04.08.21
 .image-tour img {
     transition: 1s; 
     display: block; 
@@ -891,7 +891,7 @@ p.text {
 }
 .image-tour img:hover {
     transform: scale(1);
-}
+}*/
 /*Добавлено 04.08.21*/
 
 .image-tour p {
