--- a/css/style.css
+++ b/css/style.css
@@ -451,7 +451,7 @@ li > a:only-child:after { content: ''; }
 
 .banner-top {
     /*background: url(../images/banner1-min.jpg) no-repeat center;*/
-    background: url(../images/Germany-Home.jpg) no-repeat center;
+    background: url(../images/berlin-home.jpg) no-repeat center;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
